--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batatabit</title>
     <link
+      rel="preconnect"
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+    
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
