--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           tendencias.
         </p>
         <a href="#plans" class="header--button"
-          >Conoce Nuestros Planes <span></span
-        ></a>
+          >Conoce Nuestros Planes <span></span></a>
       </div>
     </header>
     <main>
