Adding strong by <b> and a bit script for date

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </table>
             </div>
             <div class="currency-table--date">
-              <p><b>Actualizado:</b> 19 Julio 23:45</p>
+              <p><strong>Actualizado:</strong><script> document.write(new Date().toLocaleString());</script></p>
             </div>
           </div>
           <div class="main-commissions-table">
@@ -93,7 +93,7 @@
               </table>
             </div>
             <div class="commissions-table--date">
-              <p><b>Actualizado:</b>19 Julio 23:48</p>
+              <p><strong>Actualizado:</strong><script> document.write(new Date().toLocaleString());</script></p>
             </div>
           </div>
         </div>
