Adding notes in Notion and Don't Repeat in CSS, :)

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="product-cards--container">
             <article class="product-detail--card">
-              <span class="clock"></span>
+              <span class="icon-card clock"></span>
               <p class="product--card_title">Tiempo real</p>
               <p class="product--card_body">
                 Nuestra API toma información minuto a minito sobre las tasas que
@@ -116,7 +116,7 @@
               </p>
             </article>
             <article class="product-detail--card">
-              <span class="eye"></span>
+              <span class="icon-card eye"></span>
               <p class="product--card_title">No hay tasas escondidas</p>
               <p class="product--card_body">
                 Ni en la compra o al momento de exit, Batabit siempre te muestra
@@ -124,7 +124,7 @@
               </p>
             </article>
             <article class="product-detail--card">
-              <span class="dollar"></span>
+              <span class="icon-card dollar"></span>
               <p class="product--card_title">Compara monedas</p>
               <p class="product--card_body">
                 No más rumores, con Batabit sabrás el valor real de casa moneda en
@@ -132,7 +132,7 @@
               </p>
             </article>
             <article class="product-detail--card">
-              <span class="check"></span>
+              <span class="icon-card check"></span>
               <p class="product--card_title">Información confiable</p>
               <p class="product--card_body">
                 Nuestras fuentes están 100% verificadas y continuamos auditanmdo
